<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/title"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/main_question1_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/question1"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

        <RadioGroup
            android:id="@+id/main_question1_radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question1_choice_A"
                android:textSize="14sp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question1_choice_B"
                android:textSize="14sp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question1_choice_C"
                android:textSize="14sp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question1_choice_D"
                android:textSize="14sp" />

        </RadioGroup>

        <TextView
            android:id="@+id/main_question2_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/question2"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

        <RadioGroup
            android:id="@+id/main_question2_radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question2_choice_A"
                android:textSize="14sp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question2_choice_B"
                android:textSize="14sp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question2_choice_C"
                android:textSize="14sp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question2_choice_D"
                android:textSize="14sp" />
        </RadioGroup>

        <TextView
            android:id="@+id/main_question3_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/question3"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

        <LinearLayout
            android:id="@+id/main_question3_checkBoxGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question3_choice_A"
                android:textSize="14sp" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question3_choice_B"
                android:textSize="14sp" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question3_choice_C"
                android:textSize="14sp" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question3_choice_D"
                android:textSize="14sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/main_question4_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/question4"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/main_question4_editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="If it is yes, put Y, otherwise put N"
            android:textColor="@android:color/black"
            android:inputType="text"
            android:textSize="14sp" />

        <Button
            android:id="@+id/main_submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="submit" />
    </LinearLayout>
</ScrollView>